--- a/params.yaml
+++ b/params.yaml
@@ -47,7 +47,7 @@ map_free_threshold: 0.8
 ttc_threshold: 0.01
 
 # Indices for mux controller
-mux_size: 5
+mux_size: 6
 joy_mux_idx: 0
 key_mux_idx: 1
 random_walker_mux_idx: 2
@@ -56,9 +56,10 @@ nav_mux_idx: 4
 # **Add index for new planning method here**
 # **(increase mux_size accordingly)**
 new_method_mux_idx: -1
+wall_follow_idx: 5
 
 # Enables joystick if true
-joy: true
+joy: false
 # Joystick indices
 joy_speed_axis: 1
 joy_angle_axis: 3
@@ -80,6 +81,7 @@ random_walk_key_char: "r"
 nav_key_char: "n"
 # **Add button for new planning method here**
 new_key_char: "z"
+wall_follow_key_char: "f"
 
 # Keyboard driving params
 keyboard_speed: 1.8  # meters/second
@@ -109,6 +111,7 @@ brake_drive_topic: "/brake"
 nav_drive_topic: "/nav"
 # **Add name for new planning method here**
 new_drive_topic: "/new_drive"
+wall_follow_topic: "/wall_follow"
 
 # name of file to write collision log to 
 collision_file: "collision_file"
@@ -120,3 +123,8 @@ scan_frame: "laser"
 
 broadcast_transform: true
 publish_ground_truth_pose: true
+
+kp: 0.45
+ki: 0.0
+kd: 0.0
+sp: 0.6
