--- a/params.yaml
+++ b/params.yaml
@@ -47,7 +47,7 @@ map_free_threshold: 0.8
 ttc_threshold: 0.01
 
 # Indices for mux controller
-mux_size: 6
+mux_size: 7
 joy_mux_idx: 0
 key_mux_idx: 1
 random_walker_mux_idx: 2
@@ -57,6 +57,7 @@ nav_mux_idx: 4
 # **(increase mux_size accordingly)**
 new_method_mux_idx: -1
 wall_follow_idx: 5
+gap_follow_idx: 6
 
 # Enables joystick if true
 joy: false
@@ -66,7 +67,7 @@ joy_angle_axis: 3
 joy_max_speed: 2. # meters/second
 # Joystick indices for toggling mux
 joy_button_idx: 4  # LB button
-key_button_idx: 6 # not sure 
+key_button_idx: 6 # not sure
 brake_button_idx: 0 # A button
 random_walk_button_idx: 1 # ? button
 nav_button_idx: 5 # RB button
@@ -82,6 +83,7 @@ nav_key_char: "n"
 # **Add button for new planning method here**
 new_key_char: "z"
 wall_follow_key_char: "f"
+gap_follow_key_char: "g"
 
 # Keyboard driving params
 keyboard_speed: 1.8  # meters/second
@@ -112,8 +114,9 @@ nav_drive_topic: "/nav"
 # **Add name for new planning method here**
 new_drive_topic: "/new_drive"
 wall_follow_topic: "/wall_follow"
+gap_follow_topic: "/gap_following"
 
-# name of file to write collision log to 
+# name of file to write collision log to
 collision_file: "collision_file"
 
 # The names of the transformation frames published to
@@ -123,8 +126,3 @@ scan_frame: "laser"
 
 broadcast_transform: true
 publish_ground_truth_pose: true
-
-kp: 0.45
-ki: 0.0
-kd: 0.0
-sp: 0.6
